# todo-ai-chatbot

./: .gitignore  README.md
.specify/memory/: constitution.md
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/src/: __init__.py
backend/src/api/: __init__.py  main.py
backend/src/api/middleware/: __init__.py  error_handler.py  logging.py
backend/src/api/routes/: __init__.py  auth.py  chat.py  tasks.py
backend/src/auth/: __init__.py  config.py
backend/src/db/: __init__.py  database.py  health.py
backend/src/db/migrations/: env.py
backend/src/db/migrations/versions/: 001_initial_schema.py  002_add_users_table.py
backend/src/models/: __init__.py  conversation.py  message.py  task.py  user.py
backend/src/services/: __init__.py  agent.py  agent_config.py  agent_prompt.py  conversation.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: Chat.css  Chat.tsx
frontend/src/pages/: AuthPages.css  ChatPage.tsx  LandingPage.css  LandingPage.tsx  LoginPage.tsx  SignupPage.tsx  TasksPage.css  TasksPage.tsx
frontend/src/services/: api.ts  auth.ts  tasks.ts
history/prompts/001-ai-todo-chatbot/: 001-ai-todo-chatbot-spec-created.spec.prompt.md  (+2 more)
mcp/: .env.example  README.md  pyproject.toml
mcp/src/: __init__.py  db.py  models.py  server.py
mcp/src/tools/: __init__.py  add_task.py  complete_task.py  delete_task.py  list_tasks.py  update_task.py
specs/001-ai-todo-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+3 files in other folders)
