[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-todo-chatbot-backend"
version = "0.1.0"
description = "AI Todo Chatbot Backend with FastAPI and OpenAI Agents SDK"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "openai>=1.12.0",
    "openai-agents>=0.1.0",
    "sqlmodel>=0.0.14",
    "alembic>=1.13.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "asyncpg>=0.29.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
